cabal-version:      3.4
name:               advent-of-code2023
version:            0.1.0.0
synopsis:           Advent of Code 2023
license:            NONE
author:             Emilio Ziniades
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        Util.Fetch
        Util.Lists
        Util.Maths
        Util.Debug
        Day01
        Day02
        Day03
        Day04
        Day05
        Day06
        Day07
        Day08
        Day09
        Day10
        Day11
        Day12
        Day13
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        base ^>=4.17.2.1,
        containers >= 0.6.0 && < 0.7,
        bytestring >= 0.11.5 && < 0.12,
        directory >= 1.3.7 && < 1.4,
        dotenv >= 0.11.0 && < 0.12,
        req >= 3.13.1 && < 3.14,

test-suite advent-of-code2023-test
    import:            warnings
    other-modules:
        Day01Test
        Day02Test
        Day03Test
        Day04Test
        Day05Test
        Day06Test
        Day07Test
        Day08Test
        Day09Test
        Day10Test
        Day11Test
        Day12Test
        Day13Test
    default-language:  Haskell2010
    type:              exitcode-stdio-1.0
    hs-source-dirs:    test
    main-is:           Main.hs
    build-depends:
        base ^>=4.17.2.1,
        tasty >= 0.7,
        tasty-hunit >= 0.10.1,
        advent-of-code2023
