cabal-version:      3.4
name:               advent-of-code2023
version:            0.1.0.0
synopsis:           Advent of Code 2023
license:            NONE
author:             Emilio Ziniades
build-type:         Simple

common warnings
    ghc-options: -Wall

common asserts
    ghc-options: -fno-ignore-asserts

library
    import:
        warnings,
        asserts
    exposed-modules:  
        Util.Fetch
        Util.Lists
        Util.Maths
        Util.Grid
        Util.Path
        Day01
        Day02
        Day03
        Day04
        Day05
        Day06
        Day07
        Day08
        Day09
        Day10
        Day11
        Day12
        Day13
        Day14
        Day15
        Day16
        Day17
        Day18
        Day19
        Day20
        Day21
        Day22
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        base ^>=4.17.2.1,
        containers >= 0.6.0 && < 0.7,
        bytestring >= 0.11.5 && < 0.12,
        directory >= 1.3.7 && < 1.4,
        dotenv >= 0.11.0 && < 0.12,
        req >= 3.13.1 && < 3.14,
        PSQueue >= 1.2.0 && < 1.3,
        MemoTrie >= 0.6.11 && < 0.7,
        data-hash >= 0.2.0.1 && < 0.3

test-suite advent-of-code2023-test
    import:            warnings
    other-modules:
        Day01Test
        Day02Test
        Day03Test
        Day04Test
        Day05Test
        Day06Test
        Day07Test
        Day08Test
        Day09Test
        Day10Test
        Day11Test
        Day12Test
        Day13Test
        Day14Test
        Day15Test
        Day16Test
        Day17Test
        Day18Test
        Day19Test
        Day20Test
        Day21Test
        Day22Test
    default-language:  Haskell2010
    type:              exitcode-stdio-1.0
    hs-source-dirs:    test
    main-is:           Main.hs
    build-depends:
        base ^>=4.17.2.1,
        tasty >= 0.7,
        tasty-hunit >= 0.10.1,
        advent-of-code2023
